wired in keyspace settings, dependencies

--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -32,6 +32,11 @@
 			<version>${org.springframework.version}</version>
 		</dependency>
 
+        <dependency>
+            <groupId>me.prettyprint</groupId>
+            <artifactId>hector-core</artifactId>
+            <version>1.0-3</version>
+        </dependency>
 		<!-- Logging -->
 		<dependency>
 			<groupId>org.slf4j</groupId>
