--- a/api-usage/pom.xml
+++ b/api-usage/pom.xml
@@ -68,6 +68,11 @@
       <artifactId>slf4j-log4j12</artifactId>
       <version>1.6.1</version>
     </dependency>
+    <dependency>
+      <groupId>org.apigee.tutorial.common</groupId>
+      <artifactId>common</artifactId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
   </dependencies>
  
 </project>
