--- a/storage-model/pom.xml
+++ b/storage-model/pom.xml
@@ -58,5 +58,10 @@
           <artifactId>common</artifactId>
           <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+          <groupId>org.apigee.tutorial</groupId>
+          <artifactId>ez-client</artifactId>
+          <version>1.0-SNAPSHOT</version>
+        </dependency>
       </dependencies>
 </project>
