--- a/api-usage/pom.xml
+++ b/api-usage/pom.xml
@@ -73,6 +73,11 @@
       <artifactId>common</artifactId>
       <version>1.0-SNAPSHOT</version>
     </dependency>
+      <dependency>
+        <groupId>org.apigee.tutorial</groupId>
+        <artifactId>ez-client</artifactId>
+        <version>1.0-SNAPSHOT</version>
+      </dependency>
   </dependencies>
  
 </project>
