--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -2,12 +2,20 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+  
+  <parent>
+    <groupId>org.apigee.tutorial</groupId>
+    <artifactId>strata-west-2012</artifactId>
+    <version>1.0-SNAPSHOT</version>
+  </parent>
+
+
 	<groupId>org.apagee.tutorial</groupId>
 	<artifactId>webapp</artifactId>
         <description>Based off of Spring Examples, this shows how to integrate Apache Cassandra with your webapp</description>
 	<packaging>war</packaging>
-	<version>1.0.0-SNAPSHOT</version>
-	<properties>
+        <name>Webapp</name>
+        <properties>
 		<org.springframework.version>3.0.5.RELEASE</org.springframework.version>
 		<org.slf4j.version>1.6.1</org.slf4j.version>
 	</properties>
